Found a weird CSS bug where the distance from the right is calculated incorrectly until the page changes size. This makes sure the 'percent' sign is always visible.

--- a/view/css/overview.css
+++ b/view/css/overview.css
@@ -47,3 +47,7 @@
 	width: 70px;
 	padding: 1px 7px;
 }
+#overview .total-time li span.perc
+{
+	margin-right: 20px;
+}
